; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/common/extr_gas_server.c_gas_server_free_response.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/common/extr_gas_server.c_gas_server_free_response.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gas_server_response = type { i32 }

@MSG_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"DPP: Free GAS response @%p\00", align 1
@gas_server_response_timeout = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gas_server_response*)* @gas_server_free_response to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gas_server_free_response(%struct.gas_server_response* %0) #0 {
  %2 = alloca %struct.gas_server_response*, align 8
  store %struct.gas_server_response* %0, %struct.gas_server_response** %2, align 8
  %3 = load %struct.gas_server_response*, %struct.gas_server_response** %2, align 8
  %4 = icmp ne %struct.gas_server_response* %3, null
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %19

6:                                                ; preds = %1
  %7 = load i32, i32* @MSG_DEBUG, align 4
  %8 = load %struct.gas_server_response*, %struct.gas_server_response** %2, align 8
  %9 = call i32 @wpa_printf(i32 %7, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), %struct.gas_server_response* %8)
  %10 = load i32, i32* @gas_server_response_timeout, align 4
  %11 = load %struct.gas_server_response*, %struct.gas_server_response** %2, align 8
  %12 = call i32 @eloop_cancel_timeout(i32 %10, %struct.gas_server_response* %11, i32* null)
  %13 = load %struct.gas_server_response*, %struct.gas_server_response** %2, align 8
  %14 = getelementptr inbounds %struct.gas_server_response, %struct.gas_server_response* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @wpabuf_free(i32 %15)
  %17 = load %struct.gas_server_response*, %struct.gas_server_response** %2, align 8
  %18 = call i32 @os_free(%struct.gas_server_response* %17)
  br label %19

19:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @wpa_printf(i32, i8*, %struct.gas_server_response*) #1

declare dso_local i32 @eloop_cancel_timeout(i32, %struct.gas_server_response*, i32*) #1

declare dso_local i32 @wpabuf_free(i32) #1

declare dso_local i32 @os_free(%struct.gas_server_response*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
